feat: implement Tauri logging and migrate to Claude MCP format
- Add Tauri logging plugin with multiple targets (stdout, log dir, webview)
- Create TypeScript logger utility using Tauri log API
- Replace console.log calls with proper Tauri logging in AI service and env modules
- Initialize logging in main.tsx with attachConsole
- Migrate MCP configuration to use only Claude format (mcpServers)
- Remove legacy servers array format support
- Update Rust backend to handle Claude format with fallback
- Clean up TypeScript interfaces and components
- Fix build errors and unused parameters

--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "url": "https://github.com/fritzprix/tauri-agent.git"
   },
   "keywords": [
-    "tauri", 
-    "ai", 
-    "agent", 
-    "mcp", 
-    "model-context-protocol", 
-    "rust", 
-    "react", 
-    "desktop", 
+    "tauri",
+    "ai",
+    "agent",
+    "mcp",
+    "model-context-protocol",
+    "rust",
+    "react",
+    "desktop",
     "electron-alternative"
   ],
   "type": "module",
@@ -33,6 +33,7 @@
     "@langchain/core": "^0.3.62",
     "@langchain/groq": "^0.2.3",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-log": "~2.6.0",
     "@tauri-apps/plugin-opener": "^2",
     "autoprefixer": "^10.4.21",
     "dotenv": "^17.2.0",
