--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,4 +28,5 @@ anyhow = "1.0"
 tokio-util = { version = "0.7", features = ["codec"] }
 futures = "0.3"
 rmcp = { version = "0.2.1", features = ["client", "transport-child-process"] }
+tauri-plugin-log = "2"
 
