--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "@tauri-apps/cli": "^2",
+    "@types/node": "^24.0.13",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
