--- a/package.json
+++ b/package.json
@@ -29,19 +29,24 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.56.0",
+    "@google/generative-ai": "^0.24.1",
     "@langchain/community": "^0.3.48",
-    "@langchain/core": "^0.3.62",
+    "@langchain/core": "^0.3.50",
     "@langchain/groq": "^0.2.3",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-log": "~2.6.0",
     "@tauri-apps/plugin-opener": "^2",
     "autoprefixer": "^10.4.21",
     "dotenv": "^17.2.0",
+    "groq-sdk": "^0.27.0",
     "langchain": "^0.3.29",
+    "openai": "^5.9.0",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
