--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@langchain/community": "^0.3.48",
     "@langchain/core": "^0.3.50",
     "@langchain/groq": "^0.2.3",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-log": "~2.6.0",
     "@tauri-apps/plugin-opener": "^2",
@@ -45,6 +46,7 @@
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-use": "^17.6.0",
     "tailwindcss": "^4.1.11",
     "zod": "^3.24.1"
   },
