--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
+    "@google/genai": "^1.10.0",
     "@google/generative-ai": "^0.24.1",
     "@langchain/community": "^0.3.48",
     "@langchain/core": "^0.3.50",
@@ -42,6 +43,7 @@
     "dotenv": "^17.2.0",
     "groq-sdk": "^0.27.0",
     "langchain": "^0.3.29",
+    "mime": "^4.0.7",
     "openai": "^5.9.0",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
