--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "echo 'No tests yet - TypeScript check will run'",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
     "tauri": "tauri"
   },
   "dependencies": {
@@ -40,6 +42,7 @@
     "@tauri-apps/plugin-log": "~2.6.0",
     "@tauri-apps/plugin-opener": "^2",
     "autoprefixer": "^10.4.21",
+    "dexie": "^4.0.11",
     "dotenv": "^17.2.0",
     "groq-sdk": "^0.27.0",
     "langchain": "^0.3.29",
@@ -53,12 +56,21 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@tauri-apps/cli": "^2",
     "@types/node": "^24.0.13",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.31.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "prettier": "^3.6.2",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
   }
