--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-dom": "^18.3.1",
     "react-use": "^17.6.0",
     "tailwindcss": "^4.1.11",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
