--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^18.3.1",
     "react-use": "^17.6.0",
     "react-window": "^1.8.11",
+    "swr": "^2.3.4",
     "tailwindcss": "^4.1.11",
     "zod": "^3.24.1",
     "zustand": "^5.0.6"
